--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "max_cache_size_gb": 320,
-    "cache_folder": "C:\\Users\\PC\\Desktop\\cache",
-    "dataset_path": "C:\\Users\\PC\\Downloads\\Converted_theoremqa.jsonl",
+    "cache_folder": "C:\\Users\\PC\\Desktop\\cache2",
+
+    "dataset_path": "C:\\Users\\PC\\Downloads\\Converted_conv_main.jsonl",
     "validation_dataset_path": "C:\\Users\\PC\\Converted_val_completion.jsonl",
     "teacher_models_folder": "C:\\Users\\PC\\Desktop\\teachers",
     "student_path": "C:\\Users\\PC\\Desktop\\TinyLlama-1.1B-intermediate-step-1195k-token-2.5T",
@@ -16,15 +17,15 @@
     "crop_distr_to_size": 32000,
     "enable_topK": true,
     "save_topK": 300,
-    "device": "cuda:1",
+    "device": "cuda:0",
+
     "num_inference_workers": 1,
-    "reserve_vram": [4, 0.5],
-    "encourage_eos": false,
+    "reserve_vram": [0.5, 0.5],
 
     "num_epochs": 1,
     "num_warmup_steps": 200,
-    "batch_size": 4,
-    "grad_accum_batches": 1,
+    "batch_size": 1,
+    "grad_accum_batches": 4,
     "grad_checkpointing": false,
     "temperature": 1,
     "lr": 1e-5,
@@ -36,17 +37,26 @@
     "training_precision": "bf16",
     "validate_every_n_epochs": 0.5,
     "save_student_every_n_epochs": 4,
-    "num_gpu0_layers": 7,
+    
+    "num_gpu0_layers": 5,
     "device_map": "custom",
     "max_memory": {
-        "0": "20GB",
-        "1": "20GB",
+        "0": "40GB",
+        "1": "40GB",
+        "2": "40GB",
+        "3": "40GB",
+        "4": "40GB",
+        "5": "40GB",
+        "6": "40GB",
+        "7": "40GB",
         "cpu": "200GB"
     }, 
     "multi_gpu": true,
     "save_final_state": false,
+    "use_flash_attn_2": true,
     "wandb_comment": "FFT",
-    "freeze_layers": [],
+
+    "freeze_layers": [".block_sparse_moe.gate"],
     "add_bos": true,
     "prompt_format": {
         "SYS_START": "#System:\\n",
