--- a/config.json
+++ b/config.json
@@ -1,14 +1,15 @@
 {
     "max_cache_size_gb": 320,
-    "cache_folder": "C:\\Users\\PC\\Desktop\\cache2",
+    "cache_folder": "C:\\Users\\PC\\Desktop\\cache3",
 
     "dataset_path": "C:\\Users\\PC\\Downloads\\Converted_conv_main.jsonl",
     "validation_dataset_path": "C:\\Users\\PC\\Converted_val_completion.jsonl",
-    "teacher_models_folder": "C:\\Users\\PC\\Desktop\\teachers",
+    "teacher_models_folder": "C:\\Users\\PC\\Desktop\\TinyLlama-1.1B-intermediate-step-1195k-token-2.5T",
     "student_path": "C:\\Users\\PC\\Desktop\\TinyLlama-1.1B-intermediate-step-1195k-token-2.5T",
 
     "ignore_model_type": true,
     "rebase_dataset": false,
+    "use_teachers": true,
 
     "context_len": 2048,
     "save_sys_range": true,
@@ -16,7 +17,7 @@
     "save_assistant_range": true,
     "crop_distr_to_size": 32000,
     "enable_topK": true,
-    "save_topK": 300,
+    "save_topK": 400,
     "device": "cuda:0",
 
     "num_inference_workers": 1,
@@ -24,7 +25,7 @@
 
     "num_epochs": 1,
     "num_warmup_steps": 200,
-    "batch_size": 1,
+    "batch_size": 4,
     "grad_accum_batches": 4,
     "grad_checkpointing": false,
     "temperature": 1,
@@ -33,22 +34,15 @@
     "alpha": 2,
     "lr_scheduler": "wsd",
     "optimizer": "adamw",
-    "data_order": "shuffle",
+    "data_order": "sorted",
     "training_precision": "bf16",
     "validate_every_n_epochs": 0.5,
     "save_student_every_n_epochs": 4,
     
-    "num_gpu0_layers": 5,
+    "num_gpu0_layers": 9,
     "device_map": "custom",
     "max_memory": {
         "0": "40GB",
-        "1": "40GB",
-        "2": "40GB",
-        "3": "40GB",
-        "4": "40GB",
-        "5": "40GB",
-        "6": "40GB",
-        "7": "40GB",
         "cpu": "200GB"
     }, 
     "multi_gpu": true,
