--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "max_cache_size_gb": 320,
-    "cache_folder": "C:\\Users\\PC\\Desktop\\cache3",
+    "cache_folder": "D:\\randoBS",
 
-    "dataset_path": "C:\\Users\\PC\\Downloads\\Converted_conv_main.jsonl",
-    "validation_dataset_path": "C:\\Users\\PC\\Converted_val_completion.jsonl",
-    "teacher_models_folder": "C:\\Users\\PC\\Desktop\\TinyLlama-1.1B-intermediate-step-1195k-token-2.5T",
-    "student_path": "C:\\Users\\PC\\Desktop\\TinyLlama-1.1B-intermediate-step-1195k-token-2.5T",
+    "dataset_path": "F:\\desctop\\Converted_tiny_completion.jsonl",
+    "validation_dataset_path": "F:\\desctop\\Converted_tiny_completion.jsonl",
+    "teacher_models_folder": "E:\\fucking_virus\\desctop\\TinyLlama-1.1B-intermediate-step-1431k-3T_safetensors",
+    "student_path": "E:\\fucking_virus\\desctop\\TinyLlama-1.1B-intermediate-step-1431k-3T_safetensors",
 
     "ignore_model_type": true,
     "rebase_dataset": false,
@@ -23,35 +23,36 @@
     "num_inference_workers": 1,
     "reserve_vram": [0.5, 0.5],
 
-    "num_epochs": 1,
+    "num_epochs": 20,
     "num_warmup_steps": 200,
     "batch_size": 4,
     "grad_accum_batches": 4,
     "grad_checkpointing": false,
     "temperature": 1,
-    "lr": 1e-5,
+    "lr": 1e-6,
     "decay_start": 0.9,
     "alpha": 2,
     "lr_scheduler": "wsd",
-    "optimizer": "adamw",
+    "optimizer": "adamw8bit",
     "data_order": "sorted",
-    "training_precision": "bf16",
+    "training_precision": "4bit",
     "validate_every_n_epochs": 0.5,
     "save_student_every_n_epochs": 4,
     
     "num_gpu0_layers": 9,
     "device_map": "custom",
     "max_memory": {
-        "0": "40GB",
+        "0": "24GB",
+        "1": "24GB",
         "cpu": "200GB"
     }, 
-    "multi_gpu": true,
+    "multi_gpu": false,
     "save_final_state": false,
     "use_flash_attn_2": true,
     "wandb_comment": "FFT",
 
     "freeze_layers": [".block_sparse_moe.gate"],
-    "add_bos": true,
+    "add_bos": false,
     "prompt_format": {
         "SYS_START": "#System:\\n",
         "USER_START": "#User:\\n",
